# ansible_tripleo_automation

./: README.md  ansible.py  config.py  generate_hwjson.py  pyproject.toml
common/: cli.py
generate_hw_json/: ansible.py  config.py  generate_hwjson.py
generate_hw_json/common/: cli.py
generate_hw_json/interfaces/: interface.py
generate_hw_json/interfaces/drivers/: base.py  nbox.py  oneview.py
interfaces/: interface.py
interfaces/drivers/: base.py  nbox.py  netbox.py  oneview.py
